# peprunner

./: Cargo.toml  build.rs
resources/: config_dialog.ui  de.geselle_ffm.PepRunner.gschema.xml  generate_run_dialog.ui  main_window.ui  resources.gresource.xml  star_object_row.ui
src/: common.rs  main.rs  measurement.rs  ssp3.rs  ui.rs  util.rs
src/ui/: config.rs  generate_run.rs  imp.rs
src/ui/config/: imp.rs
src/ui/generate_run/: imp.rs
