[package]
name = "peprunner"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_6"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
serial = "0.4.0"
chrono = { version = "0.4.38", features = ["serde"] }
async-channel = "2.3.1"
csv = "1.3.0"

[build-dependencies]
glib-build-tools = "0.20.0"
